--- a/index.html
+++ b/index.html
@@ -16,5 +16,13 @@
             <li><a href="">header link three</a></li>
         </ul>
     </div>
+    <div class="hero">
+        <div class="hero-main-text">
+            This website is awesome
+        </div>
+        <div class="hero-secondary-text">
+            
+        </div>
+    </div>
 </body>
 </html>
