--- a/index.html
+++ b/index.html
@@ -17,11 +17,36 @@
         </ul>
     </div>
     <div class="hero">
-        <div class="hero-main-text">
-            This website is awesome
+        <div class="hero-left">
+            <div class="hero-main-text">
+                This website is awesome
+            </div>
+            <div class="hero-secondary-text">
+                This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast
+            </div>
+            <button class="sign-up">Sign up</button>
         </div>
-        <div class="hero-secondary-text">
-            
+        <img class="koala" src="./img/koala-on-tree.jpg" alt="a cute koala on a branch">
+    </div>
+    <div class="information">
+        <div class="information-header">Some random information.</div>
+        <div class="information-cards-container">
+            <div class="card">
+                <img class="card-image">
+                <div class="card-text">this is some subtext under an illustration or image</div>
+            </div>
+            <div class="card">
+                <img class="card-image">
+                <div class="card-text">this is some subtext under an illustration or image</div>
+            </div>
+            <div class="card">
+                <img class="card-image">
+                <div class="card-text">this is some subtext under an illustration or image</div>
+            </div>
+            <div class="card">
+                <img class="card-image">
+                <div class="card-text">this is some subtext under an illustration or image</div>
+            </div>
         </div>
     </div>
 </body>
