Add information section

--- a/index.html
+++ b/index.html
@@ -32,19 +32,19 @@
         <div class="information-header">Some random information.</div>
         <div class="information-cards-container">
             <div class="card">
-                <img class="card-image">
+                <img class="card-image" src="./img/kangaroo.jpg" alt="a happy little kangaroo">
                 <div class="card-text">this is some subtext under an illustration or image</div>
             </div>
             <div class="card">
-                <img class="card-image">
+                <img class="card-image" src="./img/hamster.jpg" alt="a cute hamster eating brocolli">
                 <div class="card-text">this is some subtext under an illustration or image</div>
             </div>
             <div class="card">
-                <img class="card-image">
+                <img class="card-image" src="./img/sea-turtle.jpg" alt="a cute sea turtle">
                 <div class="card-text">this is some subtext under an illustration or image</div>
             </div>
             <div class="card">
-                <img class="card-image">
+                <img class="card-image" src="./img/wombat.jpg" alt="a cute wombat">
                 <div class="card-text">this is some subtext under an illustration or image</div>
             </div>
         </div>
