--- a/index.html
+++ b/index.html
@@ -49,5 +49,11 @@
             </div>
         </div>
     </div>
+    <div class="quote">
+        <div class="quote-text">
+            I love cute animals. All kinds of animals and things. I love them all. I wish to spend my life taking care and cuddling with every cute animal. 
+        </div>
+        <div class="quote-attribution">Yichen Gong</div>
+    </div>
 </body>
 </html>
