--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <div class="hero-secondary-text">
                 This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast
             </div>
-            <button class="sign-up">Sign up</button>
+            <button class="hero-button">Sign up</button>
         </div>
         <img class="koala" src="./img/koala-on-tree.jpg" alt="a cute koala on a branch">
     </div>
@@ -53,7 +53,14 @@
         <div class="quote-text">
             I love cute animals. All kinds of animals and things. I love them all. I wish to spend my life taking care and cuddling with every cute animal. 
         </div>
-        <div class="quote-attribution">Yichen Gong</div>
+        <div class="quote-attribution">- Yichen Gong, CB1</div>
+    </div>
+    <div class="cta">
+        <div class="cta-left">
+            <div class="cta-header">Call to action! It's time!</div>
+            <div class="cta-secondary-text">Sign up for our product by clicking that button right over there!</div>
+        </div>
+        <button class="cta-button">Sign up</button>
     </div>
 </body>
 </html>
