Update html content

--- a/index.html
+++ b/index.html
@@ -9,20 +9,20 @@
 </head>
 <body>
     <div class="header">
-        <div class="logo">Header Logo</div>
+        <div class="logo">Cute Animals Zone</div>
         <ul class="links">
-            <li><a href="">header link one</a></li>
-            <li><a href="">header link two</a></li>
-            <li><a href="">header link three</a></li>
+            <li><a href="">cute cats</a></li>
+            <li><a href="">cute dogs</a></li>
+            <li><a href="">cute other animals</a></li>
         </ul>
     </div>
     <div class="hero">
         <div class="hero-left">
             <div class="hero-main-text">
-                This website is awesome
+                Look here for cute animals!
             </div>
             <div class="hero-secondary-text">
-                This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast
+                We have some of the cutest animals around. Come by and check them out!
             </div>
             <button class="hero-button">Sign up</button>
         </div>
@@ -33,19 +33,19 @@
         <div class="information-cards-container">
             <div class="card">
                 <img class="card-image" src="./img/kangaroo.jpg" alt="a happy little kangaroo">
-                <div class="card-text">this is some subtext under an illustration or image</div>
+                <div class="card-text">A Joey is a baby kangaroo.</div>
             </div>
             <div class="card">
                 <img class="card-image" src="./img/hamster.jpg" alt="a cute hamster eating brocolli">
-                <div class="card-text">this is some subtext under an illustration or image</div>
+                <div class="card-text">Hamsters spend a lot of their time eating.</div>
             </div>
             <div class="card">
                 <img class="card-image" src="./img/sea-turtle.jpg" alt="a cute sea turtle">
-                <div class="card-text">this is some subtext under an illustration or image</div>
+                <div class="card-text">Living the ocean life!</div>
             </div>
             <div class="card">
                 <img class="card-image" src="./img/wombat.jpg" alt="a cute wombat">
-                <div class="card-text">this is some subtext under an illustration or image</div>
+                <div class="card-text">Wombats, like kangaroos, also live in Australia.</div>
             </div>
         </div>
     </div>
@@ -57,8 +57,8 @@
     </div>
     <div class="cta">
         <div class="cta-left">
-            <div class="cta-header">Call to action! It's time!</div>
-            <div class="cta-secondary-text">Sign up for our product by clicking that button right over there!</div>
+            <div class="cta-header">Hurry up! Cute animals are here!</div>
+            <div class="cta-secondary-text">This is your last chance to see the cutest animals around!</div>
         </div>
         <button class="cta-button">Sign up</button>
     </div>
